testsuite/tests/lexical_envs/add_env_post/test.out
== test.lkt ==
test.lkt:16:9: error: add_env() must occur before processing children
16 |         add_env()
   |         ^^^^^^^^^


lkt_compile: Done
